--- a/assets/css/generalStructure.css
+++ b/assets/css/generalStructure.css
@@ -1,5 +1,5 @@
 #nav-group {
-  z-index: 1;
+  /* z-index: 1; */
   position: fixed;
 }
 
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   left: 5rem;
-  width: calc(100vw - 5rem);
+  width: calc(100% - 5rem);
 }
 
 #page-wrapper > * {
@@ -28,7 +28,7 @@
 
 body {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
