--- a/assets/css/generalStructure.css
+++ b/assets/css/generalStructure.css
@@ -104,12 +104,13 @@ p {
   display: flex;
   height: 100%;
 }
-.tarjeta-update{
-    background-color: #ffffff;
-    padding: 1.5rem 2rem;
-    border-radius: 12px;
-    
-   
+
+.tarjeta-update {
+  background-color: #ffffff;
+  padding: 1.5rem 2rem;
+  border-radius: 12px;
+
+
 
 }
 
@@ -218,17 +219,19 @@ a {
   font-family: Mulish;
   border: 1px solid rgb(5, 33, 111);
   padding: 8px 16px 8px 16px;
-  margin: 0px 8px;
   border-radius: 12px;
+
 
 }
 
 .secondary-btn:hover {
   background: rgb(240, 241, 245);
+  border: 1px solid rgb(5, 33, 111);
 }
 
 .secondary-btn:active {
   background: rgb(206, 212, 240);
+  border: 1px solid rgb(5, 33, 111);
 
 }
 
@@ -320,7 +323,7 @@ input {
   color: #3A3A3C;
   box-shadow: 0px 0px 4px 0px rgb(153, 187, 255);
   cursor: text;
-  
+
 }
 
 /* Table */
@@ -458,15 +461,42 @@ select:disabled {
 
 /* mobile device css code  */
 @media (max-width: 768px) {
-#content {
-    padding: 1.5rem 1.5rem;
-   
+
+  #top-menu {
+    padding: 18px 18px;
+    gap: 15px;
+    flex-direction: column;
   }
 
+  .btn-group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 15px;
+  }
 
-    .btn-group-update{
-      display: flex;
-      flex-direction: column;
+  .btn-group a {
+    width: 100%;
+  }
 
-    }
+  #content {
+    padding: 1.5rem 1.5rem;
+
+  }
+
+  .btn-group-update {
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .tarjeta {
+    padding: 1rem 1rem;
+  }
+
+  .admin-tarjetas-grupo {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
 }
