Conciliacion.html responsive done

--- a/assets/css/generalStructure.css
+++ b/assets/css/generalStructure.css
@@ -493,9 +493,19 @@ select:disabled {
   .tarjeta {
     padding: 1rem 1rem;
   }
-    .tarjeta.row-direction {
-      flex-direction: column;
-    }
+
+  .tarjeta.row-direction {
+    flex-direction: column;
+  }
+  .info-even-row{
+    flex-direction: column;
+
+  }
+  .card-title-group{
+    flex-direction: column;
+    gap: 15px;  
+
+  }
 
   .admin-tarjetas-grupo {
     display: flex;
