--- a/assets/css/generalStructure.css
+++ b/assets/css/generalStructure.css
@@ -589,7 +589,7 @@ select:disabled {
 
   .btn-search-group {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     gap: 1rem;
   }
 
