--- a/assets/css/generalStructure.css
+++ b/assets/css/generalStructure.css
@@ -147,9 +147,7 @@ p {
   gap: 0.5rem;
 }
 
-.comment-row {
-  flex-direction: column;
-}
+
 
 .comment-title {
   display: flex;
@@ -195,7 +193,6 @@ a {
   gap: 0.5rem;
   justify-content: center;
   background: #ffffff;
-  font-family: Mulish;
 }
 
 .btn-group {
@@ -213,7 +210,6 @@ a {
 
 .secondary-btn {
   color: rgb(5, 33, 111);
-  font-family: Mulish;
   border: 1px solid rgb(5, 33, 111);
   padding: 8px 16px 8px 16px;
   border-radius: 12px;
@@ -240,7 +236,6 @@ a {
 .btn-primary {
   background: var(--dark2);
   color: #ffffff;
-  font-family: Mulish;
 }
 
 /* Search */
@@ -473,23 +468,24 @@ select:disabled {
 .btn-info-req button {
   width: 100%;
 }
-.love{
-    opacity: 0;
-    max-height: 0;
-    overflow: hidden;
+.love {
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
 }
-.accordionAni{
+.accordionAni {
   opacity: 1;
-  transition: opacity 300ms linear, max-height 300ms linear ;
+  transition: opacity 300ms linear, max-height 300ms linear;
   max-height: 100%;
 }
 
-/* mobile device css code  */
+/* medium device css code  */
 @media (max-width: 1040px) {
   #top-menu {
     padding: 10px 18px;
     gap: 10px;
-    flex-direction: column;
+    display: flex;
+    flex-wrap: wrap;
     position: sticky;
   }
 
@@ -500,10 +496,8 @@ select:disabled {
 
   .btn-group {
     display: flex;
-    flex-direction: column;
     width: 100%;
     gap: 15px;
-    max-width: 300px;
   }
 
   .btn-group a {
@@ -553,11 +547,6 @@ select:disabled {
 
   .deck-title {
     flex-direction: column;
-  }
-
-  .deck-row {
-    flex-direction: column;
-    gap: 15px;
   }
 
   .info-even-row {
@@ -620,5 +609,33 @@ select:disabled {
   svg.icon.icon-tabler {
     width: 30px;
     height: 30px;
+  }
 }
+
+/* mobile device  */
+
+@media (max-width: 576px) {
+  #top-menu {   
+    flex-direction: column;  
+  }
+  .btn-group {
+    flex-wrap: wrap;
+    max-width: 100%;
+  }
+   .deck-row {
+    flex-direction: column;
+  }
+  .comment-row {
+  flex-direction: column;
+}
+.info-even-row .tarjeta {
+    height:auto;
+}
+#info-css-modify .info-detail {
+  flex-wrap: wrap;
+}
+#tarjeta-detalle .info-detail{
+  flex-wrap: wrap;
+}
+
 }
