--- a/assets/css/generalStructure.css
+++ b/assets/css/generalStructure.css
@@ -152,6 +152,17 @@ p {
   display: flex;
   width: 100%;
   justify-content: space-between;
+ 
+}
+.deck-row-update {
+  border-bottom: 1px solid var(--bs-border-color);
+  padding: 0.5rem 1.5rem;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 10px;
+ 
 }
 
 .align-right {
@@ -816,4 +827,48 @@ select:disabled {
     top: 0;
     padding-right: 20px !important; 
   }
+
+  #sidebar[aria-expanded="false"] {
+  background-color: var(--bs-primary);
+  padding: 1.5rem;
+  width: fit-content;
+  transition: 300ms ease-in;
+}
+
+#sidebar[aria-expanded="false"] .nav-link {
+  color: #f6f7fb;
+  width: 100%;
+}
+
+#sidebar[aria-expanded="false"] .menu-text {
+  display: block;
+}
+
+#sidebar[aria-expanded="false"] #logo-collapsed {
+  display: none;
+}
+
+#sidebar[aria-expanded="false"] #logo-expanded {
+  display: block;
+}
+
+#sidebar[aria-expanded="false"] ~ #overlay {
+  display: block;
+  background-color: #f6f7fb7e;
+}
+
+.nav-link:hover {
+  background-color: #ffffff;
+}
+
+.nav-link:hover > * {
+  color: var(--bs-primary);
+}
+
+#overlay {
+  position: relative; 
+}
+
+
+
 }
