--- a/assets/css/admin_dashboard.css
+++ b/assets/css/admin_dashboard.css
@@ -64,7 +64,7 @@
 .table {
   width: 100%;
   text-align: center;
-  border: 1px solid #aaa;
+  /* border: 1px solid #aaa; */
   background-color:white;
 }
 
@@ -92,8 +92,15 @@ tr,
 td,
 th {
    border-bottom: 1px solid rgb(230, 232, 235) ;
+   margin-bottom: 10px !important;
+  
 }
+table tr:last-child td 
+ {
+  border-bottom: 1px solid rgba(251, 251, 251, 0);
 
+  padding-bottom: 0px !important;
+}
 /* Button Link Styling */
 
 .btn-link {
