--- a/assets/css/generalStructure.css
+++ b/assets/css/generalStructure.css
@@ -106,6 +106,15 @@ p {
   display: flex;
   height: 100%;
 }
+.tarjeta-full-hight {
+  background-color: #ffffff;
+  padding: 1.5rem 2rem;
+  border-radius: 12px;
+  flex-direction: column;
+  gap: 1rem;
+  display: flex;
+  
+}
 
 .tarjeta-update {
   background-color: #ffffff;
