--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -109,4 +109,58 @@
 .nav-link:hover > * {
   color: var(--bs-primary);
 }
+@media (max-width: 576px) {
 
+#sidebar {
+
+  position: static;
+  height: 75vh;
+}
+#nav-group{
+  position: relative !important;
+  /* z-index: 999999999999999999999999999 !important; */
+}
+
+
+  #sidebar[aria-expanded="false"] {
+  background-color: var(--bs-primary);
+  padding: 1.5rem;
+  width: fit-content;
+  transition: 300ms ease-in;
+}
+
+#sidebar[aria-expanded="false"] .nav-link {
+  color: #f6f7fb;
+  width: 100%;
+}
+
+#sidebar[aria-expanded="false"] .menu-text {
+  display: block;
+}
+
+#sidebar[aria-expanded="false"] #logo-collapsed {
+  display: none;
+}
+
+#sidebar[aria-expanded="false"] #logo-expanded {
+  display: block;
+}
+
+#sidebar[aria-expanded="false"] ~ #overlay {
+  display: block;
+  background-color: #f6f7fb7e;
+}
+
+.nav-link:hover {
+  background-color: #ffffff;
+}
+
+.nav-link:hover > * {
+  color: var(--bs-primary);
+}
+
+#overlay {
+  position: relative; 
+}
+
+}
